fix body padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,12 @@ body {
   height: 100%;
 }
 
+@media (max-width: 43.75em) {
+  body {
+    padding: 0px;
+  }
+}
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
