--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -37,4 +37,7 @@ body {
     padding: 0;
   }
 
+  @include respond(medium){
+		padding: 0px;
+	}
 }
